--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ defaults:
       type: issues
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       share: true
       related: true
 
