Add Github edit links

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ author:
 
 # Build, theme, style settings
 repository: "shanecurcuru/menotomymatters"
+branch: "master"
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
