--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,11 @@ paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: America/New_York # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
+analytics:
+  provider: "google-universal" # false (default), "google", "google-universal", "custom"
+  google:
+    tracking_id: "UA-6070690-9"
+
 footer:
   links:
     - label: "Twitter"
