--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,9 @@ main:
   - title: "Town Meeting"
     url: /tm/
     description: "Visualizing town meeting data and votes"
+  - title: "Finances"
+    url: /finances/
+    description: "Visualizing budget and finances"
   - title: "About"
     url: /about/
 
@@ -20,6 +23,8 @@ archive:
         url: /issues/
       - title: "Town Meeting"
         url: /tm/
+      - title: "Budgets & Finance"
+        url: /finances/
   - title: "About This Site"
     children:
       - title: "Your Host"
