--- a/_config.yml
+++ b/_config.yml
@@ -52,13 +52,13 @@ footer:
   links:
     - label: "About"
       icon: "fa fa-fw fa-address-card"
-      url: "/about/"
+      url: "/about"
     - label: "Credits"
       icon: "fa fa-fw fa-hand-holding-heart"
-      url: "/colophon/"
+      url: "/colophon"
     - label: "Terms"
       icon: "fa fa-fw fa-gavel"
-      url: "/terms/"
+      url: "/terms"
 
 include:
   - _pages
