Ingore temporary work directory; don't publish code to _site

--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,9 @@ include:
   - _pages
   - _issues
   
+exclude: 
+  - assets/code
+  
 # Collections - expose data via archive pages
 collections:
   issues:
