--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,12 +2,15 @@ main:
   - title: "Mutual Aid Arlington"
     url: https://mutualaidarlington.org/?mm
     description: "Neighbors Helping Neighbors"
+  - title: "Election Guide 2020"
+    url: /townhall/election-guide-2020/
+    description: "Pointers To All Candidates"
   - title: "Issues Research"
     url: /issues/
     description: "Research links for various issues"
   - title: "Town Meetings Tracker"
     url: /meetings/
-    description: "Following Select and Redevelopment Agendas"
+    description: "Making Amazing Agendas For Town Boards"
   - title: "Finances"
     url: /issues/finances/
     description: "Visualizing budget and finances"
