Tracking Mugar Thorndike development

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,12 +20,14 @@ main:
 archive:
   - title: "Issues Research"
     children: &issuesnav
-      - title: "What do YOU want to know?"
-        url: https://forms.gle/XzEDSidcPs5aWc658
+      - title: "882 Mass Ave / Toraya Block"
+        url: /issues/882massave
       - title: "AHS Rebuild"
         url: /issues/ahsrebuild/
       - title: "Hotel Lexington"
         url: /issues/hotellexington/
+      - title: "Mugar Thorndike Place"
+        url: /issues/thorndike/
       - title: "Budgets & Finance"
         url: /issues/finances/
   - title: "Town Resources"
