Fix links (double check /'s!)

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,11 +23,11 @@ archive:
       - title: "882 Mass Ave / Toraya Block"
         url: /issues/882massave
       - title: "AHS Rebuild"
-        url: /issues/ahsrebuild/
+        url: /issues/ahsrebuild
       - title: "Hotel Lexington"
-        url: /issues/hotellexington/
+        url: /issues/hotellexington
       - title: "Mugar Thorndike Place"
-        url: /issues/thorndike/
+        url: /issues/thorndike
       - title: "Budgets & Finance"
         url: /issues/finances/
   - title: "Town Resources"
