Start tracking Mirak apartment proposal

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,6 +26,8 @@ archive:
         url: /issues/ahsrebuild
       - title: "Hotel Lexington"
         url: /issues/hotellexington
+      - title: "Mirak Apartments"
+        url: /issues/mirak
       - title: "Mugar Thorndike Place"
         url: /issues/thorndike
       - title: "Budgets & Finance"
