--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author:
   email     : "shane@menotomymatters.com"
   twitter   : "MenotomyMatters"
   linkedin  : &scid "ShaneCurcuru"
-  bio       : "Long-time Arlington resident; [open source volunteer](http://shanecurcuru.org/); [Candidate for TMM 12 Precinct](/townmeeting/campaign/)."
+  bio       : "Long-time Arlington resident; [open source volunteer](http://shanecurcuru.org/); working on transparency in town government."
 
 logo: *logo
 facebook:
