--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,13 @@
 main:
-  - title: "Town Meeting 2020"
-    url: /tm/2020special/
-    description: "Simple details about Special Town Meeting in 2020"
+  - title: "Town Meeting 2021"
+    url: /tm/2021/
+    description: "Annotated Town Meeting Warrant for 2021"
   - title: "Town Boards Tracker"
     url: /meetings/
     description: "Making Amazing Agendas For Town Boards" 
   - title: "Issues Research"
     url: /issues/
     description: "Research links for various issues"
-  - title: "Election Guide 2020"
-    url: /townhall/election-guide-2020/
-    description: "Pointers To All Candidates"
   - title: "Finances"
     url: /issues/finances/
     description: "Visualizing budget and finances"
@@ -36,7 +33,7 @@ archive:
     children: &resourcenav
       - title: "Mutual Aid Arlington"
         url: https://mutualaidarlington.org/?mm
-      - title: "Meeting Tracker (new!)"
+      - title: "Meeting Tracker"
         url: /meetings/
       - title: "Town How-Tos"
         url: /resources/
